--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 
 <body>
 
-    <center><marquee behavior="" direction="left"><h1>This is my heading tag</h1></marquee></center>
-    <marquee behavior="" direction="up"><center><h2> This is my h2 tag</h2></center></marquee>
+    <center>
+        <marquee behavior="" direction="left">
+            <h1>This is my heading tag</h1>
+        </marquee>
+    </center>
+    <marquee behavior="" direction="up">
+        <center>
+            <h2> This is my h2 tag</h2>
+        </center>
+    </marquee>
     <h3>this is my h3 tag</h3>
     <h4>this is my h4 tag</h4>
     <h5>this is my h5 tag</h5>
@@ -21,99 +29,310 @@
         Recusandae, vel nemo. Voluptatum reiciendis enim iste quia dignissimos vitae atque maxime. Sunt, tempore
         pariatur quibusdam ullam praesentium animi explicabo facilis earum maiores voluptate iste ratione ab neque
         assumenda quia voluptates quis aliquam cum ipsa nulla est eveniet minima? Eos qui, reiciendis saepe ratione quae
-        tempore illo expedita <ins>this is my new text</ins>Optio consectetur minima temporibus fuga. Modi, perferendis blanditiis. Aspernatur
-        doloremque nemo ab facere, <del>this text is deleted</del>beatae recusandae enim deserunt veniam sit quae reiciendis, esse odit? Ipsam
+        tempore illo expedita <ins>this is my new text</ins>Optio consectetur minima temporibus fuga. Modi, perferendis
+        blanditiis. Aspernatur
+        doloremque nemo ab facere, <del>this text is deleted</del>beatae recusandae enim deserunt veniam sit quae
+        reiciendis, esse odit? Ipsam
         asperiores nemo corrupti, molestiae cumque, nam esse dolorem, cupiditate eius magni hic?</p>
 
+
+
+
+    <!-- bold -->
     <p> My name is <b>Nikhil</b></p>
+
+    <!-- italic -->
     <p>haha <i>hihihi</i></p>
+
+
+    <!-- underline -->
     <p>nici <u>hapal</u></p>
+
+    <!-- subscript -->
     <p>H<sub>2</sub>O</p>
-    <br>
+
+
+    <!-- super -->
     <p>a <sup>2</sup>+ b <sup>2</sup></p><br><br>
 
-   <img src="https://mumbaimirror.indiatimes.com/photo/77384059.cms" alt="" width="400">
+    <!-- break line -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolorum impedit iste id saepe iure facere.
+        Temporibus, quod! Ut vitae at veniam nostrum vel iusto, magni rerum numquam porro! Facere, esse? <br> Quibusdam
+        incidunt tempora iure est deserunt sunt facilis voluptas maiores ratione blanditiis quod ullam iste debitis,
+        modi neque expedita.</p>
+
+    <!-- insert new text -->
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi eos deleniti magnam pariatur? Officia harum
+        explicabo animi quos dolorum iure totam vitae dolores aspernatur laborum. <ins>This is new text</ins>
+        Exercitationem optio facilis aperiam quis a explicabo adipisci earum, totam nisi corrupti natus eum, eveniet
+        atque quas esse magni, unde ex eos nesciunt eius ipsa.</p>
+
+    <!-- overline -->
+    <p>500Rs <del>999Rs</del> <s>9999RS</s></p>
 
 
+    <!-- center the text  -->
+    <center>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni cum minima, qui, id eius dignissimos ipsum
+            itaque eum sit voluptates nihil quia pariatur hic vitae ea impedit, temporibus est eaque recusandae
+            perspiciatis eligendi blanditiis tempora. Ratione doloremque dolor soluta animi veritatis ut quisquam.
+            Dolores, odit? Fugit repudiandae adipisci nesciunt ullam!</p>
+    </center>
 
-   <div>
-    <ul>
-        <li>home</li>
-        <li>makan</li>
-        <li>ghar</li>
-        <li>house</li>
-    </ul>
-
-    <ol type="I">
-        <li>khana</li>
-        <li>food</li>
-        <li>bhojan</li>
-        <li>aahar</li>
-    </ol>
-
-    <dl>
-        <dt>Coffee</dt>
-        <dd>Cold Coffee 40</dd>
-        <dd>Hot Coffee 30</dd>
-        <dd>Black Coffee 120</dd>
-        <dd>Green Coffee 140</dd>
-
-        <dt>Tea</dt>
-        <dd>Cold Tea 40</dd>
-        <dd>Hot Tea 30</dd>
-        <dd>Black Tea 120</dd>
-        <dd>Green Tea 140</dd>
+    <!-- moving text  -->
+    <center>
+        <marquee behavior="" direction="left">
+            <h1>Hii My Name is Nikhil Dubey</h1>
+        </marquee>
+    </center>
 
 
-    </dl>
-   </div>
+    <!-- network image -->
 
-   <hr>
-
-
-   <form action="">
-    Name : <input type="text"> <br><br>
-    Email : <input type="email"> <br><br>
-    Password : <input type="password"><br><br>
-    Gender : <input type="radio" name="gender">Male
-             <input type="radio" name="gender">Female
-             <br><br>
-
-    Language : <input type="checkbox">Hindi 
-                <input type="checkbox">English
-                <input type="checkbox">Marathi <br><br>
-
-    Color : <input type="color"><br><br> 
-    
-    File : <input type="file"> <br><br>
-
-    Date : <input type="date"><br><br>
-
-    Time : <input type="time"> <br><br>
-
-
-    <select>
-          <option value="None">None</option>
-          <option value="Jaipur">Jaipur</option>
-          <option value="Kota">Kota</option>
-          <option value="Jodhpur">Jodhpur</option>
-          <option value="Baran">Baran</option>
-          <br><br>
-
-
-
-    </select>
-    <br><br>
-
-    Message : <textarea name="" id="" cols="30" rows="10"></textarea>
+    <img src="https://mumbaimirror.indiatimes.com/photo/77384059.cms" alt="" width="400">
 
     <br><br>
-    
 
-    <button>Submit</button>
 
-   </form>
-   
+    <!-- local image -->
+
+    <img src="pic.png" alt="" width="400px">
+
+
+    <br><br>
+
+
+
+    <!-- hyperlink  -->
+
+    <a href="https://www.google.com/" target="_top">Google</a>
+    <br>
+    <br>
+    <a href="https://github.com/nikhildubey341" target="_blank">Github</a>
+
+
+
+    <!-- list:
+    ordered list
+    unordered list
+    discription list -->
+    <div>
+        <ul>
+            <li>home</li>
+            <li>makan</li>
+            <li>ghar</li>
+            <li>house</li>
+        </ul>
+    </div>
+
+
+
+    <!-- orderedlist -->
+    <div>
+        <ol type="1">
+            <li>Hii</li>
+            <li>Hello</li>
+            <li>Namsate</li>
+            <li>Ram Ram</li>
+        </ol>
+    </div>
+    <div>
+        <ol type="A">
+            <li>Hii</li>
+            <li>Hello</li>
+            <li>Namsate</li>
+            <li>Ram Ram</li>
+
+        </ol>
+
+    </div>
+    <div>
+        <ol type="a">
+            <li>Hii</li>
+            <li>Hello</li>
+            <li>Namsate</li>
+            <li>Ram Ram</li>
+
+        </ol>
+
+    </div>
+    <div>
+        <ol type="i">
+            <li>Hii</li>
+            <li>Hello</li>
+            <li>Namsate</li>
+            <li>Ram Ram</li>
+
+        </ol>
+
+    </div>
+
+    <!-- discription list -->
+    <div>
+
+        <dl>
+            <dt>Coffee</dt>
+            <dd>Cold Coffee 40</dd>
+            <dd>Hot Coffee 30</dd>
+            <dd>Black Coffee 120</dd>
+            <dd>Green Coffee 140</dd>
+
+            <dt>Tea</dt>
+            <dd>Cold Tea 40</dd>
+            <dd>Hot Tea 30</dd>
+            <dd>Black Tea 120</dd>
+            <dd>Green Tea 140</dd>
+
+
+        </dl>
+    </div>
+
+    <hr>
+
+
+    <form action="">
+        Name : <input type="text"> <br><br>
+        Email : <input type="email"> <br><br>
+        Password : <input type="password"><br><br>
+        Gender : <input type="radio" name="gender">Male
+        <input type="radio" name="gender">Female
+        <br><br>
+
+        Language : <input type="checkbox">Hindi
+        <input type="checkbox">English
+        <input type="checkbox">Marathi <br><br>
+
+        Color : <input type="color"><br><br>
+
+        File : <input type="file"> <br><br>
+
+        Date : <input type="date"><br><br>
+
+        Time : <input type="time"> <br><br>
+
+
+        <select>
+            <option value="None">None</option>
+            <option value="Jaipur">Jaipur</option>
+            <option value="Kota">Kota</option>
+            <option value="Jodhpur">Jodhpur</option>
+            <option value="Baran">Baran</option>
+            <br><br>
+
+
+
+        </select>
+        <br><br>
+
+        Message : <textarea name="" id="" cols="30" rows="10"></textarea>
+
+        <br><br>
+
+
+        <button>Submit</button>
+        <br>
+        <br>
+
+
+        <hr>
+
+        <br>
+        <br>
+
+
+
+        <!-- table -->
+        <center>
+
+            <table border="1">
+                <tr>
+                    <td>Name</td>
+                    <td>ID</td>
+                    <td>City</td>
+                    <td>Email Id</td>
+                </tr>
+                <tr>
+                    <td>Nikhil</td>
+                    <td rwspan="2">Ram</td>
+                    <td>Shyam</td>
+                    <td>Krishna</td>
+                </tr>
+                <tr>
+                    <td>101</td>
+                    <td>102</td>
+                    <td>103</td>
+                    <td>104</td>
+                </tr>
+
+                <tr>
+                    <td>Kota</td>
+                    <td colspan="2">Jaipur</td>
+                    <td>Ajmer</td>
+                    <td>Udaipur</td>
+                </tr>
+                <tr>
+                    <td>nic12@gmail.com</td>
+                    <td>pic123@gmail.com</td>
+                    <td>sh34@gmail.com</td>
+                    <td>kr12@gmail.com</td>
+                </tr>
+
+            </table>
+        </center>
+
+        <br>
+        <!-- video -->
+
+        <center>
+            <video width="200px" height="200px" controls>
+                <source src="nic.mp4.mp4">
+            </video>
+        </center>
+
+        <!-- audio  -->
+        <center>
+            <audio controls loop>
+                <source src="audi.mp3.mp3">
+            </audio>
+        </center>
+
+        <!-- quotation -->
+        <center>
+            <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque facere magnam nesciunt ex natus
+                voluptate cumque quas obcaecati pariatur</q>
+
+        </center>
+
+
+        <br>
+        <!-- similar tags to div -->
+        <!-- for easy understanding these are written -->
+        <header></header>
+        <footer></footer>
+        <article></article>
+        <br>
+        <br>
+        <!-- progress -->
+        <center>
+
+            C++<progress max="100" value="80">80%</progress><br>
+            Java<progress max="100" value="70">70%</progress><br>
+            Python<progress max="100" value="60">60%</progress><br>
+            JavaScript<progress max="100" value="50">50%</progress><br>
+
+        </center>
+
+        <br><br>
+
+        <!-- span       -->
+
+        <p style="color: brown;"> <label for="Lorem" style="color:blue;">Lorem</label> <span
+                style="color: blue;">Nikhil</span>doipsum sit amet consectetur adipisicing elit. Reiciendis, quibusdam?
+        </p>
+
+
+    </form>
+
 
 
 </body>
